# foosball-rl

./: .gitignore  README.md  main.py  model.xml  player.xml  pyproject.toml
assets/: base.mtl  bot.mtl
src/: env.py  inference.py  test.py  training.py
src/ppo/: training.py
