[project]
name = "fooseball-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.1",
    "mujoco-warp>=3.10.0.2",
    "rsl-rl-lib>=5.4.2",
    "warp-lang>=1.15.0",
]

[tool.ruff.lint]
ignore = ["ALL"]

[dependency-groups]
dev = [
    "marimo>=0.23.15",
]
test = [
    "pillow>=12.3.0",
    "pytest>=9.1.1",
]
